--- a/ui/styles.css
+++ b/ui/styles.css
@@ -90,12 +90,16 @@ body {
     text-align: center;
 
     background-color: rgb(215, 215, 215);
-    min-height: 100px;
+    min-height: 150px;
     width: 100%;
     max-width: 500px;
     margin: auto;
 
     border-radius: 5px;
+}
+
+#bootstrap-overrides #current-song:hover {
+    cursor: pointer;
 }
 
 #bootstrap-overrides #current-song h3 {
@@ -104,6 +108,10 @@ body {
 
     margin-top: 0;
     margin-bottom: 0;
+}
+
+#bootstrap-overrides #queue-title {
+    margin-bottom: 20px;
 }
 
 #bootstrap-overrides #default-queue {
@@ -124,4 +132,5 @@ body {
 
 #bootstrap-overrides .song-entry:hover {
     background-color: rgba(215, 215, 215, 1);
+    cursor: pointer;
 }
